--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="مواقيت الصلاة الدقيقة لمدينة بدر والقاهرة مع عداد تنازلي وصوت الأذان والمدفع">
+    <meta name="keywords" content="مواقيت الصلاة, مدينة بدر, أذان المغرب, موعد الأذان, صلاة العشاء, توقيت الصلاه">
     <title>مواقيت الصلاة </title>
     <link href="https://fonts.googleapis.com/css2?family=Amiri:wght@400;700&family=Tajawal:wght@300;500;800&display=swap" rel="stylesheet">
     <link rel="icon" href="image.png">
@@ -129,3 +131,4 @@
 </body>
 
 </html>
+
